agrego metodos a las clases

--- a/Entrega4/pegSolitaire.html
+++ b/Entrega4/pegSolitaire.html
@@ -95,26 +95,28 @@
                   <div
                     style="display: flex; gap: 10px; justify-content: center"
                   >
-                    <div
+                    <img
+                      src="assets/images/ficha1.jpg"
+                      alt="Galaxia 1"
                       style="
                         width: 60px;
                         height: 60px;
                         border-radius: 50%;
-                        background: linear-gradient(135deg, #00d4ff, #0066cc);
-                        border: 3px solid #fff;
+                        object-fit: cover;
                       "
-                    ></div>
-                    <div
+                    />
+                    <img
+                      src="assets/images/ficha2.jpg"
+                      alt="Galaxia 2"
+                      class="ficha"
                       style="
                         width: 60px;
                         height: 60px;
                         border-radius: 50%;
-                        background: linear-gradient(135deg, #ff00ff, #cc00cc);
-                        border: 3px solid #fff;
+                        object-fit: cover;
                       "
-                    ></div>
+                    />
                   </div>
-                  <p style="margin-top: 10px; font-size: 0.9em">🌌 Espacial</p>
                 </div>
               </div>
 
@@ -154,13 +156,13 @@
 
             <div class="game-controls">
               <button class="btn-primary" onclick="resetGame()">
-                 Reiniciar
+                Reiniciar
               </button>
               <button class="btn-secondary" onclick="volverMenu()">
-                 Menú Principal
+                Menú Principal
               </button>
               <button class="btn-secondary" onclick="toggleInstructions()">
-                 Ayuda
+                Ayuda
               </button>
             </div>
 
