--- a/Entrega4/pegSolitaire.html
+++ b/Entrega4/pegSolitaire.html
@@ -87,33 +87,33 @@
 
               <p>Selecciona tu tema de fichas</p>
               <div class="popup-img-container-canvas tema-fichas">
-                <div
-                  style="text-align: center; cursor: pointer"
-                  class="tema-option"
-                  data-tema="espacial"
-                >
-                  <div
-                    style="display: flex; gap: 10px; justify-content: center"
-                  >
+                <div class="tema-option" data-tema="espacial">
+                  <h3>Tema Espacial</h3>
+                  <div class="fichas-preview">
                     <img
                       src="assets/images/ficha1.jpg"
                       alt="Galaxia 1"
+                      class="ficha-seleccionable"
+                      data-ficha="assets/images/ficha1.jpg"
                       style="
                         width: 60px;
                         height: 60px;
                         border-radius: 50%;
                         object-fit: cover;
+                        cursor: pointer;
                       "
                     />
                     <img
                       src="assets/images/ficha2.jpg"
                       alt="Galaxia 2"
-                      class="ficha"
+                      class="ficha-seleccionable"
+                      data-ficha="assets/images/ficha2.jpg"
                       style="
                         width: 60px;
                         height: 60px;
                         border-radius: 50%;
                         object-fit: cover;
+                        cursor: pointer;
                       "
                     />
                   </div>
