--- a/Entrega4/index.html
+++ b/Entrega4/index.html
@@ -369,7 +369,7 @@
             <div class="slick">
               <div class="game-card">
                 <img
-                  src="assets/images/fondoPegSolitaire.png"
+                  src="assets/images/peg.png"
                   alt="Peg Solitaire"
                   class="game-image"
                 />
