--- a/Entrega4/pegSolitaire.html
+++ b/Entrega4/pegSolitaire.html
@@ -283,18 +283,18 @@
         </div>
         <div class="gameplays-img">
           <img
-            src="assets/images/gameplay2.png"
+            src="assets/images/gameplay1111 (1).png"
             class="gameplay-image"
             alt=""
           />
-          <img src="assets/images/gameplay.png" class="gameplay-image" alt="" />
+          <img src="assets/images/gameplay1111 (2).png" class="gameplay-image" alt="" />
           <img
-            src="assets/images/gameplay2.png"
+            src="assets/images/gameplay1111 (1).png"
             class="gameplay-image"
             alt=""
           />
           <img
-            src="assets/images/fondoPegSolitaire.png"
+            src="assets/images/gameplay1111 (2).png"
             class="gameplay-image"
             alt=""
           />
