--- a/Entrega5/flappy.html
+++ b/Entrega5/flappy.html
@@ -519,5 +519,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="/js/flappy/main.js"></script>
+    <script src="/js/flappy/Game.js"></script>
+    <script src="/js/flappy/Bird.js"></script>
+    <script src="/js/flappy/Pipe.js"></script>
   </body>
 </html>
