--- a/Entrega5/flappy.html
+++ b/Entrega5/flappy.html
@@ -205,6 +205,9 @@
               <button class="button button__orange" onclick="volverMenu()">
                 Volver al Menú
               </button>
+              <button class="button button__orange" onclick="resetGame()">
+                Reiniciar
+              </button>
             </div>
           </div>
         </div>
