--- a/Entrega5/flappy.html
+++ b/Entrega5/flappy.html
@@ -525,5 +525,6 @@
     <script src="/js/flappy/Game.js"></script>
     <script src="/js/flappy/Bird.js"></script>
     <script src="/js/flappy/Pipe.js"></script>
+    <script src="/js/flappy/Collectible.js"></script>
   </body>
 </html>
