--- a/Entrega5/flappy.html
+++ b/Entrega5/flappy.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/parallax.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <title>flappy ....</title>
   </head>
   <body>
