--- a/Entrega5/index.html
+++ b/Entrega5/index.html
@@ -383,7 +383,7 @@
                 </div>
               </div>
             </div>
-               <div class="slick">
+            <div class="slick">
               <div class="game-card">
                 <img
                   src="assets/images/blocka.png"
@@ -400,7 +400,23 @@
                 </div>
               </div>
             </div>
-            
+            <div class="slick">
+              <div class="game-card">
+                <img
+                  src="assets/images/demon_ice.png"
+                  alt="Flappy Demon Ice"
+                  class="game-image"
+                />
+                <div class="card-title">Flappy Demon Ice</div>
+                <div class="hover-overlay">
+                  <a href="flappy.html"
+                    ><button class="play-button">
+                      <span>PLAY NOW</span>
+                    </button></a
+                  >
+                </div>
+              </div>
+            </div>
             <div class="slick">
               <div class="game-card">
                 <img
