--- a/Entrega5/flappy.html
+++ b/Entrega5/flappy.html
@@ -543,10 +543,10 @@
       src="https://kit.fontawesome.com/c59d1be4df.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/flappy/main.js"></script>
-    <script src="/js/flappy/Game.js"></script>
-    <script src="/js/flappy/Bird.js"></script>
-    <script src="/js/flappy/Pipe.js"></script>
-    <script src="/js/flappy/Collectible.js"></script>
+    <script src="js/flappy/main.js"></script>
+    <script src="js/flappy/Game.js"></script>
+    <script src="js/flappy/Bird.js"></script>
+    <script src="js/flappy/Pipe.js"></script>
+    <script src="js/flappy/Collectible.js"></script>
   </body>
 </html>
