corrijo rutas css

--- a/Entrega5/flappy.html
+++ b/Entrega5/flappy.html
@@ -67,10 +67,7 @@
     </nav>
     <div class="cont-all">
       <div class="cont-texto-pegSolitaire">
-        <img
-          src="assets/images/demon_ice.png"
-          alt=""
-        />
+        <img src="assets/images/demon_ice.png" alt="" />
 
         <div class="seguimiento-nav">
           <h2>Peg Solitaire</h2>
