--- a/Entrega5/flappy.html
+++ b/Entrega5/flappy.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <title>flappy ....</title>
+    <title>flappy Demon Ice</title>
   </head>
   <body>
     <nav class="navbar">
