--- a/Entrega5/flappy.html
+++ b/Entrega5/flappy.html
@@ -117,6 +117,9 @@
             <!-- 6 - Montañas medias -->
             <div id="layer3" class="parallax-layer layer-mid-mts"></div>
 
+            <div id="knightRun" class="parallax-layer layer-knight"></div>
+
+
             <!-- 7 - Primer plano -->
             <div id="layer2" class="parallax-layer layer-fg-mts"></div>
 
@@ -219,8 +222,7 @@
               <h2 class="game__h1-game" style="color: #4ade80">
                 🎉 ¡Victoria!
               </h2>
-              <p>Tu puntaje final es: <span id="winScore">0</span></p>
-              <p>Movimientos realizados: <span id="winMoves">0</span></p>
+              <p>Tu puntaje final es: <span id="finalScore">0</span></p>
               <button class="button button__orange" onclick="volverMenu()">
                 Volver al Menú
               </button>
